Fix Header z-index layers

--- a/src/components/Details/_details.scss
+++ b/src/components/Details/_details.scss
@@ -15,6 +15,7 @@ div.slide-pane__content {
   flex-direction: column;
   height: 180px;
   margin-top: 70px;
+  position: relative;
 }
 
 .details-banner {
