--- a/src/components/Header/_header.scss
+++ b/src/components/Header/_header.scss
@@ -2,7 +2,7 @@
   display: grid;
   grid-template-columns: 30% 40% 30%;
   position: fixed;
-  z-index: 100;
+  // z-index: 100;
   top: 0;
   height: 70px;
   width: 100%;
